--- a/app/src/main/res/drawable-night/gradient_transaksi.xml
+++ b/app/src/main/res/drawable-night/gradient_transaksi.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#D78B81"
-        android:endColor="#FF0000"
+        android:startColor="#FF2500"
+        android:endColor="#762C2C"
         android:angle="270"/>
 </shape>
