--- a/app/src/main/res/drawable/gradient_produk.xml
+++ b/app/src/main/res/drawable/gradient_produk.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#FF954B"
-        android:endColor="#FFF79C"
+        android:startColor="#E9E182"
+        android:endColor="#FF954B"
         android:angle="270"/>
 </shape>
