--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Estimasi">#1B1B1B</color>
     <color name="shape_product">#FFFFFF</color>
@@ -11,4 +10,8 @@
     <color name="color_printer">#9C27B0</color>
     <color name="Navbar">#FFFFFF</color>
     <color name="CircleNavbar">#ff8c00</color>
+    <color name="TombolBawah">#E2E1E1</color>
+    <color name="black">#000000</color>
+    <color name="green_status">#4CAF50</color>
+    <color name="red_status">#F44336</color>
 </resources>
